# it-passport-learning

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  RETROSPECTIVE.md  RETROSPECTIVE_phase2.md  RETROSPECTIVE_phase3.md  RETROSPECTIVE_phase4.md  RETROSPECTIVE_stage2.7.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  stage9_r2_process.py
.source/: README.md
docs/: README.md  STATE.md
evidence/: README.md
failures/: README.md  quiz_phase1.5_S98_2009h21a-q091_answerkey_mismatch.md  quiz_phase1.5_S98_2010h22a-q086_term_drift.md  quiz_phase1.5_S98_2011h23a-q100_answerkey_mismatch.md  quiz_phase1.5_S98_2012h24a-q096_nm_definition.md  quiz_phase1.5_S98_2014h26a-q093_malformed_json.md  quiz_phase1.5_S98_2015h27a-q086_prologue_drift.md  quiz_phase1.5_S98_2022r04-q043_attempt_1.md  quiz_phase1.5_S98_2022r04-q043_attempt_1_defective.json  quiz_phase1.5_S98_2024r06-q067_attempt_1.md  quiz_phase1_S88_2026r08-q072_attempt_1.md  quiz_phase1_S88_2026r08-q072_attempt_1_defective.json  quiz_phase1_S89_2021r03-q067_attempt_1.md  quiz_phase1_S89_2021r03-q067_attempt_1_defective.json  quiz_phase1_S93_2014h26h-q086_attempt_1.md  quiz_phase1_S93_2014h26h-q086_attempt_1_defective.json  quiz_phase1_S94_2013h25a-q052_regression.md  quiz_phase1_S94_2013h25a-q052_regression_defective.json  quiz_phase1_S94_genuine_defects.md  quiz_phase1_S96_2010h22h-q002_regression.md  quiz_phase1_S96_2010h22h-q002_regression_defective.json  quiz_phase2_S104_2019r01a_persist_lossy.md  quiz_phase2_S104_2019r01a_persist_lossy_defective_merge.json  (+9 more)
(+2853 files in other folders)
