[project]
name = "it-passport-learning"
version = "0.1.0"
description = "Trilingual learning content factory for IT Passport (ITパスポート) certification exam"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "hakupao", email = "59277722+hakupao@users.noreply.github.com" },
]
readme = "README.md"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["packages/extractor/tests"]
markers = [
    "unit: unit tests (default, fast, no I/O)",
    "integration: integration tests (touch disk / mock APIs)",
    "e2e: end-to-end tests (require API keys + real EPUB; opt-in only)",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["packages/extractor/tests/_fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["packages/extractor/tests/_fixtures"]

[[tool.mypy.overrides]]
module = ["mistralai.*", "claude_agent_sdk.*"]
ignore_missing_imports = true
